ajout collab / managerservice / competence + affichage

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/images/sopralogo.png">
-  
+  <link rel="stylesheet" href="assets/assets1/vendors/select2/select2.min.css">
+  <link rel="stylesheet" href="assets/assets1/vendors/select2-bootstrap-theme/select2-bootstrap.min.css">
   <link rel="stylesheet" href="assets/assets1/vendors/feather/feather.css">
   <link rel="stylesheet" href="assets/assets1/vendors/ti-icons/css/themify-icons.css">
   <link rel="stylesheet" href="assets/assets1/vendors/css/vendor.bundle.base.css">
@@ -45,7 +46,22 @@
   <script src="assets/assets1/js/settings.js"></script>
   <script src="assets/assets1/js/todolist.js"></script>
   <!-- endinject -->
-
+  <script src="assets/assets1/vendors/js/vendor.bundle.base.js"></script>
+  <!-- endinject -->
+  <!-- Plugin js for this page -->
+  <script src="assets/assets1/vendors/typeahead.js/typeahead.bundle.min.js"></script>
+  <script src="assets/assets1/vendors/select2/select2.min.js"></script>
+  <!-- End plugin js for this page -->
+  <!-- inject:js -->
+  <script src="assets/assets1/js/off-canvas.js"></script>
+  <script src="assets/assets1/js/hoverable-collapse.js"></script>
+  <script src="assets/assets1/js/template.js"></script>
+  <script src="assets/assets1/js/settings.js"></script>
+  <script src="assets/assets1/js/todolist.js"></script>
+  <!-- endinject -->
+  <!-- Custom js for this page-->
+  <script src="assets/assets1/js/file-upload.js"></script>
+  <script src="assets/assets1/js/typeahead.js"></script>
 
 
   <!--front-->
