profile espace managerrh

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="assets/assets1/vendors/feather/feather.css">
   <link rel="stylesheet" href="assets/assets1/vendors/ti-icons/css/themify-icons.css">
   <link rel="stylesheet" href="assets/assets1/vendors/css/vendor.bundle.base.css">
+  <link rel="stylesheet" href="assets/assets1/vendors/mdi/css/materialdesignicons.min.css">
+
   <link rel="stylesheet" href="assets/assets1/vendors/ti-icons/css/themify-icons.css">
   <link rel="stylesheet" href="assets/assets1/css/vertical-layout-light/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900" rel="stylesheet"> 
