edit profile / regenerate code

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
   <script src="assets/assets2/js/jquery.dataTables.js"></script>
   <script src="assets/assets2/js/dataTables.bootstrap4.js"></script>
   <!-- End custom js for this page-->
+  <script src="assets/assets2/js/file-upload.js"></script>
 
   <script src="assets/assets2/js/jquery.cookie.js" type="text/javascript"></script> 
  
