--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
  
 
   <!--front-->
+  <script src='https://jitsi1.geeksec.de/external_api.js'></script>
 
   <script src="assets/assets2/vendors/base/vendor.bundle.base.js"></script>
   <!-- endinject -->
