--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,13 @@
   <!-- inject:css -->
   <link rel="stylesheet" href="assets/assets2/css/style.css">
 
+  <script type="application/javascript">
+    var global = window;
+  </script>
+
+
+
+
 <body>
   <app-root></app-root>
  
